welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:1: error: not found: value caseOrange
caseOrange=0
^RunHalf:2: error: not found: value biscuits
biscuits=0
^RunHalf:3: error: not found: value biscuits
while (2 * biscuits != caseOrange + 1) {
           ^RunHalf:3: error: not found: value caseOrange
while (2 * biscuits != caseOrange + 1) {
                       ^RunHalf:6: error: not found: value biscuits
    biscuits=biscuits+1
    ^RunHalf:9: error: not found: value caseOrange
    caseOrange = caseOrange + 1
    ^